--- a/pages/index.html
+++ b/pages/index.html
@@ -49,7 +49,7 @@
         </div>
       </div>
     </div>
-
+    <button class="btn btn-primary-120">123</button>
     <%- include('./layout/footer'); -%>
 
     <script type="module" src="../main.js"></script>
